# buildver

./: MANIFEST.in  README.md  setup.cfg
buildver/: __init__.py  __main__.py
buildver/cli/: __init__.py
buildver/error/: __init__.py
docs/modules/: README.md
docs/modules/content/buildver/: README.md
docs/modules/content/buildver.error/: README.md
docs/modules/content/buildver.error/content/: functions.md
docs/modules/content/buildver.error/content/classes/: Error.md  MissingVersionFileError.md
docs/modules/content/buildver/content/: functions.md
