[metadata]
name = buildver
version = file: VERSION
url = https://github.com/pyrustic/buildver
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Tool to build Python packages with built-in intuitive versioning mechanism
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    CLI
    tool
    versioning
    wheel
    build
    packaging
    distribution
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    subrun

[options.entry_points]
console_scripts =
    buildver = buildver.__main__:main
